# bocu1

./: Cargo.toml  README.md
bocu1/: Cargo.toml  LICENSE  README.md
bocu1/src/: delta_encoding.rs  iter.rs  lib.rs  packed.rs  tests.rs  trailing_byte_selection.rs  util.rs  variable_length_code.rs
bocu1_refimpl/: Cargo.toml
bocu1_refimpl/src/: bocu1.c  bocu1.h  bocu1tst.c  build.rs  lib.rs  tests.rs
